Sept 3, 2018 - Added a new sentence, and updated formatting

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <h2>Hello world, from Ibraheem</h2>
     <p>Sept 3, 2018</p>
 
-    <p>This is Ibraheem, I am A lego builder  </p>
-    <P>I was building legos since I was little</P>
+    <p>This is Ibraheem, I am A lego builder.
+    I was building legos since I was little.  
+        I was building cool thing,s
+    </P>
 </html>
