Sept 3, 2018 -  Added an image of my lego cars, and updated formatting

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
     <h1>My first html page</h1>
     <h2>Hello world, from Ibraheem</h2>
     <p>Sept 3, 2018</p>
+    <p>
+        This is Ibraheem, I am A lego builder.
+        I was building legos since I was little.  
+        I was building cool things.
+    </p>
+    <p>
+        <img src="img/lego-cars.jpg" alt="lego cars" width="300px">
+    </p>
 
-    <p>This is Ibraheem, I am A lego builder.
-    I was building legos since I was little.  
-        I was building cool thing,s
-    </P>
 </html>
